--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
 <body>
   <h1>Innblock Services Directory</h1>
   <div class="links">
-    <a class="link-card" href="https://chatgpt.innblock.com" target="_blank">🧠 Ollama WebUI</a>
-    <a class="link-card" href="https://ollama.innblock.com" target="_blank">🧩 Ollama API</a>
+    <a class="link-card" href="http://65.21.228.24:8080/" target="_blank">🧠 Ollama WebUI</a>
+    <a class="link-card" href="http://65.21.228.24:11434" target="_blank">🧩 Ollama API</a>
     <a class="link-card" href="https://n8n.innblock.com" target="_blank">⚙️ n8n Workflow Automation</a>
   </div>
 </body>
